--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -1,10 +1,10 @@
 doctype html
 html
   head
-    title= title
-    //- link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
-    scirpt(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
+    title lokovei 內部訂單管理
+    script(src="https://code.jquery.com/jquery-2.1.4.min.js")
+    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet" )
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
   body
     nav.navbar.navbar-default(role='navigation')
       .container-fluid
@@ -15,7 +15,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='#') Brand
+          a.navbar-brand(href='#') lokovei 內部訂單管理
         // Collect the nav links, forms, and other content for toggling
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
@@ -42,10 +42,10 @@ html
                 li.divider
                 li
                   a(href='#') One more separated link
-          form.navbar-form.navbar-left(role='search')
-            .form-group
-              input.form-control(type='text', placeholder='Search')
-            button.btn.btn-default(type='submit') Submit
+          //- form.navbar-form.navbar-left(role='search')
+          //-   .form-group
+          //-     input.form-control(type='text', placeholder='Search')
+          //-   button.btn.btn-default(type='submit') Submit
           ul.nav.navbar-nav.navbar-right
             li
               a(href='#') Link
@@ -63,4 +63,8 @@ html
                 li.divider
                 li
                   a(href='#') Separated link
-      block content
+        // /.navbar-collapse
+      // /.container-fluid
+
+
+    block content
