add demo page of main table

--- a/lokovei-ERP/asset/sass/main.sass
+++ b/lokovei-ERP/asset/sass/main.sass
@@ -1,5 +1,17 @@
 .table-wrapper
+  // border-top: 1px solid gray
   width: 100%
   padding-left: 22px
   padding-right: 22px
+  margin-top: 62px
   // width: 2000px
+.table-wrapper-item
+  margin-top: -30px
+  margin-left: 52px
+  padding-left: 10px
+  padding-right: 42px
+  border-left: 4px solid gray
+// .ipt
+//   font-weight: bolder
+//   font-size: 1.3em
+//   margin-bottom: -12px
