--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -5,6 +5,9 @@ html
     script(src="https://code.jquery.com/jquery-2.1.4.min.js")
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet" )
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
+    //- script(src="javascript/jquery-2.1.4.min.js")
+    //- link(rel="stylesheet", href="stylesheets/bootstrap.min.css")
+    //- script(src="javascript/bootstrap.min.js")
   body
     nav.navbar.navbar-default(role='navigation')
       .container-fluid
