--- a/lokovei-ERP/views/main.jade
+++ b/lokovei-ERP/views/main.jade
@@ -39,13 +39,13 @@ block content
             td
               button.btn.btn-success 已出貨
             td
-              button.btn.btn-warning
-                span.glyphicon.glyphicon-pencil(aria-hidden='true')
-              = '  '
               button.btn.btn-danger
                 span.glyphicon.glyphicon-trash(aria-hidden='true')
               = '  '
-              button.btn.btn-danger
+              button.btn.btn-warning
+                span.glyphicon.glyphicon-pencil(aria-hidden='true')
+              = '  '
+              button.btn.btn-primary
                 span.glyphicon.glyphicon-print(aria-hidden='true')
     .table-wrapper-item
       table.table.table-hover
