--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -23,49 +23,30 @@ html
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
             li.active
-              a(href='#')
-                | Link
-                span.sr-only (current)
+              a(href='#') 訂單佇列
             li
-              a(href='#') Link
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
-                | Dropdown
-                span.caret
-              ul.dropdown-menu(role='menu')
-                li
-                  a(href='#') Action
-                li
-                  a(href='#') Another action
-                li
-                  a(href='#') Something else here
-                li.divider
-                li
-                  a(href='#') Separated link
-                li.divider
-                li
-                  a(href='#') One more separated link
+              a(href='#') 產線佇列
           //- form.navbar-form.navbar-left(role='search')
           //-   .form-group
           //-     input.form-control(type='text', placeholder='Search')
           //-   button.btn.btn-default(type='submit') Submit
           ul.nav.navbar-nav.navbar-right
             li
-              a(href='#') Link
+              a(href='#') 登入
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
-                | Dropdown
+                | 工作台
                 span.caret
               ul.dropdown-menu(role='menu')
                 li
-                  a(href='#') Action
+                  a(href='#') 廠商設定
                 li
-                  a(href='#') Another action
+                  a(href='#') 產品設定
                 li
-                  a(href='#') Something else here
+                  a(href='#') 產線設定
                 li.divider
                 li
-                  a(href='#') Separated link
+                  a(href='#') 帳號管理
         // /.navbar-collapse
       // /.container-fluid
 
