init queue of factory

--- a/lokovei-ERP/asset/stylesheets/queue_order.css
+++ b/lokovei-ERP/asset/stylesheets/queue_order.css
@@ -1,4 +1,4 @@
-/* line 1, ../sass/main.sass */
+/* line 1, ../sass/queue_order.sass */
 .table-wrapper {
   width: 100%;
   padding-left: 22px;
@@ -6,7 +6,7 @@
   margin-top: 62px;
 }
 
-/* line 8, ../sass/main.sass */
+/* line 8, ../sass/queue_order.sass */
 .table-wrapper-item {
   margin-top: -30px;
   margin-left: 52px;
