--- a/lokovei-ERP/views/layout.jade
+++ b/lokovei-ERP/views/layout.jade
@@ -32,6 +32,8 @@ html
           //-   button.btn.btn-default(type='submit') Submit
           ul.nav.navbar-nav.navbar-right
             li
+              a(href='#') 您好，陳柏安
+            li
               a(href='#') 登入
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
