--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -5,8 +5,8 @@ block content
   link(rel="stylesheet", href="/stylesheets/bootstrap-datepicker3.min.css")
   script(src="javascript/bootstrap-datepicker.min.js")
 
-  link(rel="stylesheet", href="/stylesheets/main.css")
-  script(src="javascript/main.js")
+  link(rel="stylesheet", href="/stylesheets/queue_order.css")
+  script(src="javascript/queue_order.js")
   - for( var i = 0 ; i < 3 ; i ++)
     .table-wrapper
       table.table
