--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   link(rel="stylesheet", href="stylesheets/queue_factory.css")
+  script(src="javascript/queue_factory.js")
   .screen
     .wrapper
       - var lineCount = 10
