--- a/lokovei-ERP/asset/sass/queue_order.sass
+++ b/lokovei-ERP/asset/sass/queue_order.sass
@@ -11,7 +11,10 @@
   padding-left: 10px
   padding-right: 42px
   border-left: 4px solid gray
-// .ipt
-//   font-weight: bolder
-//   font-size: 1.3em
-//   margin-bottom: -12px
+
+.ctrl
+  margin: 2px
+
+.sortCtrl
+  float: right
+  width: 150px
