--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -52,13 +52,13 @@ block content
               td
                 button.btn.btn-success 已出貨
               td
-                button.btn.btn-danger.ctrl
+                button.btn.btn-danger.ctrl(type='button', data-toggle='modal', data-target='#delDialog')
                   span.glyphicon.glyphicon-trash(aria-hidden='true')
                 button.btn.btn-warning.ctrl.edit(data-orderID= orderId, data-onEdit='0')
                   span.glyphicon.glyphicon-pencil(aria-hidden='true')
                 button.btn.btn-primary.ctrl
                   span.glyphicon.glyphicon-print(aria-hidden='true')
-                button.btn.btn-success.ctrl
+                button.btn.btn-success.ctrl(type='button', data-toggle='modal', data-target='#finishDialog')
                   span.glyphicon.glyphicon-ok(aria-hidden='true')
       .table-wrapper-item
         table.table.table-hover
@@ -95,3 +95,31 @@ block content
                 label.label.label-danger 維修中
               td(data-ctrl="text") 鎳氫電池改為離電池，並且加上懸掛系統
               td(data-ctrl="date") 2015/8/27
+  #delDialog.modal.fade
+    .modal-dialog.modal-sm
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal')
+            span(aria-hidden='true') ×
+            span.sr-only Close
+          h4.modal-title 提醒您
+        .modal-body
+          p 是否要刪除該筆訂單?
+          P 刪除後員工將無法預覽。
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') 取消
+          button.btn.btn-danger(type='button') 刪除
+  #finishDialog.modal.fade
+    .modal-dialog.modal-sm
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal')
+            span(aria-hidden='true') ×
+            span.sr-only Close
+          h4.modal-title 提醒您
+        .modal-body
+          p 請確認訂單是否已經結案？
+          p 訂單結案後將不會出現在佇列中。
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') 取消
+          button.btn.btn-success(type='button') 結案並且隱藏
