--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -14,9 +14,9 @@ block content
           .line
             .thumbnail.lineName
               h3= '產線編號' + ( line + 1 )
-              p 產線資訊(1)
-              p 產線資訊(2)
-              p 產線資訊(3)
+              p 負責人：陳柏安
+              p 0930-014-167
+              p 備註：無
       - for( var day = 0; day < 5; day++ )
         .day
           - for( var line = 0; line < lineCount; line++ )
