--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -10,7 +10,7 @@ block content
 
   .container
     .row
-      button.btn.btn-success.ctrl
+      button#addorder.btn.btn-success.ctrl
         span.glyphicon.glyphicon-plus(aria-hidden='true')
         |   新增訂單
       select.form-control.sortCtrl
