add order infoo

--- a/lokovei-ERP/asset/sass/queue_factory.sass
+++ b/lokovei-ERP/asset/sass/queue_factory.sass
@@ -7,8 +7,9 @@
   min-width: 180px
   max-height: 230px
   margin-right: 4px
+  cursor: -webkit-grab
   &:last-child
-    margin-right: 12px
+    margin-right: 22px
   .toRight
     margin-left: auto
     // color: red
@@ -48,3 +49,9 @@
 .screen
   width: 100%
   overflow-x: scroll
+
+.info
+  margin-right: 2px
+  padding-right: 4px
+  float: right
+  cursor: help
