--- a/lokovei-ERP/views/queue_factory.jade
+++ b/lokovei-ERP/views/queue_factory.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   link(rel="stylesheet", href="stylesheets/queue_factory.css")
   script(src="javascript/queue_factory.js")
+  script(src="javascript/queue_factory_drag.js")
   .screen
     .wrapper
       - var lineCount = 10
@@ -23,10 +24,13 @@ block content
             - if( line == 0 )
               .thumbnail.dayTitle
                 h4 2015/8/20 (四)
-            .line
+            .line(id='line'+line ondrop="drop(event)" ondragover="allowDrop(event)")
               - for( var job = 0; job < 3; job++ )
-                .thumbnail.job
-                  h5 CHT-013-BO002
+                .thumbnail.job(id='line'+line+'job'+job draggable="true" ondragstart="drag(event)")
+                  h5
+                    - var order = '<p>訂單編號：123<br/>經銷商：全馬<br/>出車日期：2015/5/12<br/>訂單總數：25</p>'
+                    span.info.glyphicon.glyphicon-tags.job-info( aria-hidden='true', tabindex='0', role='button', data-toggle='popover', data-trigger='click', title='訂單資訊', data-html="true", data-content=order)
+                    | CHT-013-BO002
                   h5 Lokovei SR-800-寶馬棕
                   p 數量 3
                   p
