--- a/lokovei-ERP/views/queue_order.jade
+++ b/lokovei-ERP/views/queue_order.jade
@@ -52,7 +52,7 @@ block content
               td
                 button.btn.btn-success 已出貨
               td
-                button.btn.btn-danger.ctrl(type='button', data-toggle='modal', data-target='#delDialog')
+                button#predelete.btn.btn-danger.ctrl(type='button', data-toggle='modal', data-target='#delDialog')
                   span.glyphicon.glyphicon-trash(aria-hidden='true')
                 button.btn.btn-warning.ctrl.edit(data-orderID= orderId, data-onEdit='0')
                   span.glyphicon.glyphicon-pencil(aria-hidden='true')
@@ -123,7 +123,7 @@ block content
           P 刪除後員工將無法預覽。
         .modal-footer
           button.btn.btn-default(type='button', data-dismiss='modal') 取消
-          button.btn.btn-danger(type='button') 刪除
+          button.delete.btn.btn-danger(type='button') 刪除
   #finishDialog.modal.fade
     .modal-dialog.modal-sm
       .modal-content
